--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "webpack --mode production",
-        "start": "webpack-dev-server --mode development --open --hot"
+        "build": "webpack",
+        "start": "webpack-dev-server --open --hot"
     },
     "keywords": [],
     "author": "",
